chore(dep): 同步 requirements.txt 至最新版本

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-tiktoken>=0.6.0
-uvicorn
-fastapi
-tortoise-orm
-colorlog
-redis
-PyJWT
-alibabacloud-dysmsapi20170525
-alibabacloud-tea-openapi
-edge_tts
-python-multipart
-aiomysql
-openai
+tiktoken>=0.9
+uvicorn>=0.34
+fastapi>=0.115
+tortoise-orm>=0.24
+colorlog>=6.8
+redis>=6.0
+PyJWT>=2.10
+alibabacloud-dysmsapi20170525>=4.1.0
+alibabacloud-tea-openapi>=0.3
+edge_tts>=7.0
+python-multipart>=0.0
+aiomysql>=0.2
+openai>=1.76
